Added version information into <meta>

--- a/public/index.html
+++ b/public/index.html
@@ -7,8 +7,10 @@
   <head>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="description" content="Sample Minimal app created in Vue that utilizes the content sdk library">
+    <meta name="description" content="Sample Minimal app created in Vue that uses Oracle Content Management">
     <meta name="viewport" content="width=device-width,initial-scale=1.0">
+    <meta name="BUILD_TAG" content="<%= process.env.BUILD_TAG %>">
+    <meta name="@oracle/content-management-sdk" content="<%= process.env.SDK_VERSION %>">
     <link rel="icon" href="<%= BASE_URL %>favicon.png">
     <title>Vue Minimal Sample</title>
   </head>
